tests/neg/undefined-type.scala
class Foo extends ??? // error

object Foo extends ??? // error